--- a/TODO
+++ b/TODO
@@ -49,6 +49,6 @@ here as well.
    - something that makes the ball have a "laser" pointing it to the 
      direction it will go off to;
    
-
+* Implement a big playing area
 
 
