CeBIT was a LIE! hehe :p

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 spinner.pl
 
-A quick game for CeBIT
+An arcade game to explore the high level problem space for Perl games with SDL. 
 
 AUTHORS 
 
